cleanup for new dto branch